[package]
name = "dircmp"
version = "0.1.0"
authors = ["Henrik Patjens <hpatjens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
bincode = "1.3.1"
structopt = "0.3"
colored = "2.0.0"

[dependencies.serde]
version = "1.0.110"
features = ["derive"]
